--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./app.js" type="module" defer></script>
     <title>Front-end Whatsapp</title>
 </head>
-<body>
+<body id="programa">
     <header class= "cabecario" id="cabecario"></header>
     <main class= "entrada-informacoes" id="entrada-informacoes"></main>
     <footer class= "escopo"></footer>
