--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body id="programa">
     <header class= "cabecario" id="cabecario"></header>
     <main class= "entrada-informacoes" id="entrada-informacoes"></main>
-    <footer class= "escopo"></footer>
+    <footer class= "escopo" id="escopo"></footer>
 </body>
 </html>
